--- a/package.json
+++ b/package.json
@@ -3,6 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+
+    "@ant-design/icons": "^5.3.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.12",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@mui/x-data-grid": "^6.0.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +23,29 @@
     "@types/node": "^16.18.83",
     "@types/react": "^18.2.60",
     "@types/react-dom": "^18.2.19",
+    "antd": "^5.15.0",
+    "axios": "^1.3.4",
+    "chart.js": "^4.3.0",
+    "formik": "^2.2.9",
+    "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
+    "react-hot-toast": "^2.4.0",
+    "react-jwt": "^1.1.8",
+    "react-query": "^3.39.3",
+    "react-router": "^6.9.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
